@@ -7,6 +7,9 @@ Version 1.3.13+svn:
    * fixed timer bell not always playing (bug #10559)
  * user interface
    * the apple key works a shortcut modifier again (bug #10586)
+ * WML engine:
+   * Fixed a problem where two [recall]s in a SP game could get an out of sync
+     recruitment
  * miscellaneous and bug fixes:
    * when loading a unit some traits didn't get applied correctly but got
      fixed in a later state. This could lead to some units not leveling 
